Fix pong animation on iOS 15 (#4)

--- a/src/static/styles/pongAnimation.css
+++ b/src/static/styles/pongAnimation.css
@@ -9,7 +9,6 @@
 }
 .pong-left-paddle {
   position:absolute;
-  float: left;
   width: 16px;
   height: 50px;
   background: var(--primary-glitch-color);
@@ -33,46 +32,47 @@
   height: 20px;
   background: var(--light-bg-color);
   border-radius: 4px;
-  left: 16px;
   -webkit-animation: pong-animation-ball 5s linear infinite;
   animation: pong-animation-ball 5s linear infinite;
 }
 
 @-webkit-keyframes pong-animation-left-paddle {
   0% {top: 0px;}
-  75% {top: 100px}
-  100% {top: 0px}
+  75% {top: 100px;}
+  100% {top: 0px;}
 }
 @keyframes pong-animation-left-paddle {
   0% {top: 0px;}
-  75% {top: 100px}
-  100% {top: 0px}
+  75% {top: 100px;}
+  100% {top: 0px;}
 }
 
 @-webkit-keyframes pong-animation-right-paddle {
   0% {top: 100px;}
   25% {top: 100px;}
-  50% {top: 0px}
-  100% {top: 100px}
+  50% {top: 0px;}
+  100% {top: 100px;}
 }
 @keyframes pong-animation-right-paddle {
   0% {top: 100px;}
   25% {top: 100px;}
-  50% {top: 0px}
-  100% {top: 100px}
+  50% {top: 0px;}
+  100% {top: 100px;}
 }
 
+/* Bug in iOS Safari 15 causes an issue where animations with calc don't play nice with those without.
+   Due to this, we use 0.1% and 99.9% rather than 0% and 100% for the ball animation */
 @-webkit-keyframes pong-animation-ball {
-  0% {left: 16px; top: 8px}
-  25% {left: calc(50% - 12px); top: 132px}
-  50% {left: calc(100% - 32px); top: 8px;}
-  75% {left: calc(50% - 12px); top: 132px}
-  100% {left: 16px; top: 8px}
+  0% {left: calc(0.1% + 16px); top: 8px;}
+  25% {left: calc(50% - 12px); top: 132px;}
+  50% {left: calc(99.9% - 32px); top: 8px;}
+  75% {left: calc(50% - 12px); top: 132px;}
+  100% {left: calc(0.1% + 16px); top: 8px;}
 }
 @keyframes pong-animation-ball {
-  0% {left: 16px; top: 8px}
-  25% {left: calc(50% - 12px); top: 132px}
-  50% {left: calc(100% - 32px); top: 8px;}
-  75% {left: calc(50% - 12px); top: 132px}
-  100% {left: 16px; top: 8px}
+  0% {left: calc(0.1% + 16px); top: 8px;}
+  25% {left: calc(50% - 12px); top: 132px;}
+  50% {left: calc(99.9% - 32px); top: 8px;}
+  75% {left: calc(50% - 12px); top: 132px;}
+  100% {left: calc(0.1% + 16px); top: 8px;}
 }
